- [Bugfix] Checksum verification disabled by default for file transfers
- [Bugfix] Add --login option to executed shell for "Open in Terminal" feature
- [Bugfix] Disable transfer acceleration for AWS GovCloud (S3)
- [Bugfix] Login using temporary tokens from STS to AWS GovCloud (S3) (#10594)
- [Bugfix] Support auto-configuration from ~/.aws/credentials for AWS GovCloud and Amazon S3 China (S3)

6.9.2
- [Bugfix] Failure using RSA/ECDSA private in new OpenSSH format (#10552)
- [Bugfix] Prompt to select parent folder for file dragged to upload (Mac App Store) (#10580)

6.9.1
- [Bugfix] Fix code signature designated requirement issue (Mac App Store)

6.9.0
- [Localize] Estonian Localization
- [Feature] Default connection profile for Microsoft Sharepoint Online (#10115)
- [Feature] Support for eu-west-3 (Stockholm) region (S3)
- [Feature] Improve listing performance for versioned buckets (S3) (#10426)
- [Feature] Add --profile option to select connection profile (CLI)
- [Feature] Add --nochecksum option to skip verifying checksums (CLI)
- [Feature] Add option to disable checksum verification for file transfers (#10215)
- [Bugfix] Stop button to interrupt transfer (#10363)
- [Bugfix] Save passphrase for private key in keychain only after successful connect (#10526)
- [Bugfix] Failure authenticating with proxy using Integrated Windows Authentication (IWA) authentication (WebDAV, Windows)
- [Bugfix] Failure authenticating with NTLM authentication (WebDAV, Windows) (#10556)
- [Bugfix] Failure to read attributes of common prefix (S3) (#8724)
- [Bugfix] Asks for OAuth authentication code on every connect attempt (Google Drive) (#10555)
- [Bugfix] Transfers with many files to vault take a long time to finish (Cryptomator) (#10564)
- [Bugfix] Cannot list KMS keys when using IAM Cross Account Roles (S3) (#10565)
- [Bugfix] Updated localizations

6.8.3
- [Bugfix] Refinements to dark mode (macOS) (#10508, #10510)