@@ -57,6 +57,7 @@
 
 
 
+
     </style>
 </head>
 
@@ -88,11 +89,20 @@
     </li>
     <li><span class="label label-warning">Bugfix</span> Disable transfer acceleration for AWS GovCloud (S3)</li>
     <li><span class="label label-warning">Bugfix</span> Login using temporary tokens from STS to AWS GovCloud (S3)
-        (#10594)
+        (<a
+            href="https://trac.cyberduck.io/ticket/10594">#10594</a>)
     </li>
     <li><span class="label label-warning">Bugfix</span> Support auto-configuration from ~/.aws/credentials for AWS
         GovCloud and Amazon S3 China (S3)
     </li>
+    <li><span class="label label-warning">Bugfix</span> Modification date not applied when copying file between browser
+        windows (<a
+            href="https://trac.cyberduck.io/ticket/10592">#10592</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Unable to delete incomplete multipart upload (S3) (<a
+            href="https://trac.cyberduck.io/ticket/10568">#10568</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Updated localizations</li>
 </ul>
 
 <p>
